--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "js-browser-console",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "Wraps the javascript console with log levels, formatting and colors.",
   "main": "console.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "build": "babel src -d ."
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/DasRed/js-console/issues"
   },
-  "homepage": "https://github.com/DasRed/js-console#readme"
+  "homepage": "https://github.com/DasRed/js-console#readme",
+  "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1"
+  }
 }
