--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-browser-console",
-  "version": "1.0.11",
+  "version": "1.0.13",
   "description": "Wraps the javascript console with log levels, formatting and colors.",
   "main": "console.js",
   "scripts": {
@@ -16,7 +16,7 @@
     "url": "https://github.com/DasRed/js-console/issues"
   },
   "homepage": "https://github.com/DasRed/js-console#readme",
-  "dependencies": {
+  "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1"
   }
