--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
-  "name": "js-browser-console",
-  "version": "1.0.15",
-  "description": "Wraps the javascript console with log levels, formatting and colors.",
-  "main": "console.js",
-  "scripts": {
-    "build": "babel src -d ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DasRed/js-console.git"
-  },
-  "author": "Marco Starker",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/DasRed/js-console/issues"
-  },
-  "homepage": "https://github.com/DasRed/js-console#readme",
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
-  }
+    "name": "js-browser-console",
+    "version": "2.0.0",
+    "description": "Wraps the javascript console with log levels, formatting and colors.",
+    "main": "src/index.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/DasRed/js-console.git"
+    },
+    "author": "Marco Starker",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/DasRed/js-console/issues"
+    },
+    "homepage": "https://github.com/DasRed/js-console#readme",
+    "scripts": {
+        "build": "rollup -c ./rollup.config.js",
+        "prepublishOnly": "npm run build"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.4.0",
+        "@babel/plugin-proposal-class-properties": "^7.4.0",
+        "@babel/plugin-transform-runtime": "^7.4.0",
+        "@babel/polyfill": "^7.4.0",
+        "@babel/preset-env": "^7.4.2",
+        "rollup": "^1.7.3",
+        "rollup-plugin-babel": "^4.3.2",
+        "rollup-plugin-clear": "^2.0.7",
+        "rollup-plugin-commonjs": "^9.2.2",
+        "rollup-plugin-node-resolve": "^4.0.1",
+        "rollup-plugin-progress": "^1.1.1",
+        "rollup-plugin-terser": "^4.0.4"
+    }
 }
