--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "js-browser-console",
-    "version": "2.4.0",
+    "version": "2.5.0",
     "description": "Wraps the javascript console with log levels, formatting and colors.",
     "main": "src/index.js",
+    "type": "module",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/DasRed/js-console.git"
